--- a/img/wap/storelist.html
+++ b/img/wap/storelist.html
@@ -70,7 +70,7 @@ footer {
 	height:auto;
 	width:100%;
 	border:0;
-	background:#f5f5f5;
+	background:#f8f8f8;
 	display:block;
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2)
 }
@@ -133,7 +133,7 @@ footer {
 }
 .tips>.tips-content {
 	padding:8px 10px;
-	background:#f5f5f5
+	background:#f8f8f8
 }
 .tips>.tips-content>p {
 	color:#505050;
@@ -144,7 +144,7 @@ footer {
 	padding:0
 }
 .store-item-nor {
-	background:#f5f5f5;
+	background:#f8f8f8;
 	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.2);
 	list-style:none;
 	width:100%;
@@ -204,7 +204,7 @@ footer {
 	margin-right:40px;
 	padding:12px 10px;
 	padding-right: 120px;
-	background:linear-gradient(to right, rgba(245, 245, 245, 0.75) -40px, #f5f5f5 30px, rgba(245, 245, 245, 0.75) 100%);
+	background:linear-gradient(to right, rgba(245, 245, 245, 0.75) -40px, #f8f8f8 30px, rgba(245, 245, 245, 0.75) 100%);
 	-webkit-box-shadow:-3px 0px 2px rgba(0,0,0,0.2);
 
 }
@@ -231,7 +231,7 @@ footer {
 	margin-top:3px
 }
 .catalog-item {
-	background:#f5f5f5;
+	background:#f8f8f8;
 	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.2);
 	list-style:none;
 	width:100%;
@@ -303,7 +303,7 @@ footer {
 	width:100%;
 	height:100%;
 	margin:0;
-	background:#f5f5f5;
+	background:#f8f8f8;
 	box-shadow:0 0 2px rgba(0,0,0,0.2);
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2);
 	list-style:none;
@@ -539,7 +539,7 @@ footer {
 }
 .info-content {
 	padding:8px 10px;
-	background:#f5f5f5;
+	background:#f8f8f8;
 	display:block
 }
 .form-content{
@@ -867,10 +867,9 @@ footer {
 
 		function showdelivery(mystore){
 			deliveryinsert="";
-			if(mystore.deliveryfee>0&&(mystore.isdeliveryfree==true)&&mystore.sendingfee>0){
-				alert(1);
+			if(mystore.deliveryfee>0&&mystore.isdeliveryfree&&mystore.sendingfee>0){
 				deliveryinsert+='外送费用：￥'+mystore.deliveryfee+'（购满￥'+mystore.sendingfee+'免外送费）';
-			}else if(mystore.deliveryfee>0&&(mystore.isdeliveryfree==false)&&mystore.sendingfee>0){
+			}else if(mystore.deliveryfee>0&&!mystore.isdeliveryfree&&mystore.sendingfee>0){
 				deliveryinsert+='外送费用：￥'+mystore.deliveryfee+'（起送价格：￥'+mystore.sendingfee+'）';
 			}else if(mystore.deliveryfee>0&&!(mystore.sendingfee>0)){
 				deliveryinsert+='外送费用：￥'+mystore.deliveryfee+'（起送价格：无）';
@@ -885,12 +884,12 @@ footer {
 
 	//fakedatasource
     var datasource={"storelist":[
-	{"storeid":0,"storename":"茹果","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"20","isdeliveryfree":"true","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
-	{"storeid":1,"storename":"黄焖鸡","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"0","sendingfee":"20","isdeliveryfree":"false","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
-	{"storeid":2,"storename":"吉祥馄饨","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"15","isdeliveryfree":"false","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
-	{"storeid":3,"storename":"锅盖面","announcement":"开业八折酬宾","storestatus":"false","deliveryfee":"3","sendingfee":"20","isdeliveryfree":"false","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
-	{"storeid":4,"storename":"梓研汤包","announcement":"开业八折酬宾","storestatus":"false","deliveryfee":"3","sendingfee":"20","isdeliveryfree":"true","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
-	{"storeid":5,"storename":"淡然粥道","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"20","isdeliveryfree":"true","logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"}
+	{"storeid":0,"storename":"茹果","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"20","isdeliveryfree":true,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
+	{"storeid":1,"storename":"黄焖鸡","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"0","sendingfee":"20","isdeliveryfree":false,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
+	{"storeid":2,"storename":"吉祥馄饨","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"15","isdeliveryfree":false,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
+	{"storeid":3,"storename":"锅盖面","announcement":"开业八折酬宾","storestatus":"false","deliveryfee":"3","sendingfee":"20","isdeliveryfree":false,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
+	{"storeid":4,"storename":"梓研汤包","announcement":"开业八折酬宾","storestatus":"false","deliveryfee":"3","sendingfee":"20","isdeliveryfree":true,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"},
+	{"storeid":5,"storename":"淡然粥道","announcement":"开业八折酬宾","storestatus":"true","deliveryfee":"3","sendingfee":"20","isdeliveryfree":true,"logo":"http://192.168.1.196/weChat/img/default-logo.jpg","url":"http://192.168.1.196/weChat/index.php/wap/index/9?openid=lvxiang&token=12345"}
 	]
 	};
 	//storestatus分true和false，当且仅当店铺处于正常状态并在营业时间内，值为true。
